<resources>
  <string name="app_name">Road Testings</string>
  <string name="gradation">Gradation</string>
  <string name="sieve">Sieve Size</string>
  <string name="_53_00_mm">53.00 mm</string>
  <string name="_45_00">45.00 mm</string>
  <string name="_22_40">22.40 mm</string>
  <string name="_11_20">11.20 mm</string>
  <string name="_4_75">4.75 mm</string>
  <string name="_2_36_mm">2.36 mm</string>
  <string name="_600">600 μ</string>
  <string name="_75">75 μ</string>
  <string name="calculate">Calculate</string>
  <string name="_0_85_mm">0.85 mm</string>
  <string name="_0_425_mm">0.425 mm</string>
  <string name="sieve_size_in_mm">Sieve size in mm</string>
  <string name="wt_of_the_sample_retained_in_the_sieve_in_gms">Wt. of the sample retained in the sieve in (gms)</string>
  <string name="cumulative_wt_of_the_sample_retained_in_the_sieve">Cumulative Wt. of the sample retained in the sieve</string>
  <string name="percentage_of_the_sample_retained_in_the_sieve">Percentage of the sample retained in the sieve</string>
  <string name="percentage_of_passing_through_the_sieve">Percentage of passing through the sieve</string>
  <string name="limits_as_per_standards_in">Limits as per standards in %</string>
  <string name="percentage_of_oversize_undersize">Percentage of Oversize/Undersize</string>
  <string name="remarks">Remarks</string>
  <string name="_75_00_mm">75.00 mm</string>
  <string name="_26_5">26.5</string>
  <string name="_26_5_mm">26.5 mm</string>
  <string name="_9_5_mm">9.5 mm</string>
  <string name="_10000">10000</string>
  <string name="_75_00">75.00</string>
  <string name="download">Download</string>
  <string name="add">ADD</string>
  <string name="gradation_1">Grade - 1</string>
  <string name="gradation_3">Grade - 3</string>
  <string name="gradation_5">Grade - 5</string>
  <string name="chainge_at_km">Chiange at Km</string>
  <string name="grb">GRB</string>
  <string name="pan">Pan</string>
    <string name="density">Density</string>
  <string name="gsb">GSB</string>
  <string name="wmm">WMM</string>
    <string name="location">Location</string>
    <string name="w1_wt_before_pouring">W1 -> Wt. before pouring</string>
  <string name="w2_wt_after_pouring">W2 -> Wt. after pouring</string>
  <string name="w3">W3</string>
  <string name="w4_wt_in_cone"><![CDATA[W4 -> Wt. in cone]]></string>
  <string name="w5_wt_of_sand"><![CDATA[W5 -> Wt. of sand]]></string>
  <string name="d_density"><![CDATA[d -> density]]></string>
  <string name="v_vol_of_pit"><![CDATA[V -> Vol. of pit]]></string>
  <string name="w_wt_of_sample"><![CDATA[W -> Wt. of SDBC sample]]></string>
  <string name="d_bulk_density"><![CDATA[D -> Density of SDBC]]></string>
  <string name="initial_wt_of_sample">Initial Wt. of Sample</string>
  <string name="final_wt_of_the_sample">Final Wt. of the sample</string>
  <string name="f_m_c">F.M.C</string>
  <string name="field_dry_density">Field dry density</string>
  <string name="lab_density_as_per_job_mix">Lab Density as per Job Mix</string>
  <string name="relative_compaction">Relative Compaction</string>
  <string name="to_table">To Table</string>
  <string name="sl_no">Sl.No.</string>
  <string name="description">Description</string>
  <string name="sample_at_km">Sample at KM</string>
  <string name="_1">1</string>
  <string name="_2">2</string>
  <string name="_3">3</string>
  <string name="_4">4</string>
  <string name="_5">5</string>
  <string name="_6">6</string>
  <string name="_7">7</string>
    <string name="_8">8</string>
  <string name="_9">9</string>
  <string name="_10">10</string>
  <string name="_11">11</string>
  <string name="_12">12</string>
    <string name="wt_of_sand_cylinder_before_pouring_g">Wt. of sand + cylinder before pouring (g)</string>
  <string name="wt_of_sand_cylinder_after_pouring_g">Wt. of sand + cylinder after pouring (g)</string>
    <string name="wt_of_sand_filling_into_pit_including_cone_portion_g">wt.of sand filling into pit including cone portion (g)</string>
  <string name="wt_of_sand_in_cone_portion_g">Wt. of sand in cone portion (g)</string>
  <string name="wt_of_sand_in_the_pit_g">Wt. of sand in the pit (g)</string>
  <string name="density_of_the_sand_g_cc">Density of the sand (g/cc)</string>
  <string name="vol_of_the_pit">Vol. of the pit</string>
  <string name="wt_of_the_sdbc_sample">Wt. of the SDBC Sample (g)</string>
  <string name="density_of_the_sdbc_sample_g_cc">Density of the SDBC Sample (g/cc)</string>
  <string name="field_dry_density_g_cc">Field Dry Density (g/cc)</string>
  <string name="lab_density_as_per_job_mix_g_cc">Lab density as per Job Mix (g/cc)</string>
</resources>
