<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">


  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/gradation1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/rounded_corners"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:text="@string/gradation_1"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/gradation3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/rounded_corners"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:text="@string/gradation_3"
    android:textSize="20sp"
    app:layout_constraintBottom_toTopOf="@+id/gradation5"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/gradation1" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/gradation5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/rounded_corners"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:text="@string/gradation_5"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/gradation3" />
</androidx.constraintlayout.widget.ConstraintLayout>
