<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gradation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:textSize="20sp"
            android:elevation="8dp"
            android:backgroundTint="#D3D3D3"
            android:text="@string/gradation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/insideGradation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/density"
            android:layout_marginStart="40dp"
            app:layout_constraintEnd_toEndOf="@id/gradation"
            app:layout_constraintTop_toBottomOf="@id/gradation">

            <androidx.appcompat.widget.AppCompatButton
                android:background="@drawable/rounded_corners"
                android:id="@+id/gsb"
                android:elevation="8dp"
                android:backgroundTint="#D3D3D3"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gsb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/insideGsb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gsb">

                <androidx.appcompat.widget.AppCompatButton
                    android:background="@drawable/rounded_corners"
                    android:id="@+id/gradation1"
                    android:textSize="20sp"
                    android:elevation="8dp"
                    android:backgroundTint="#D3D3D3"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gradation_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/gradation3"
                    android:background="@drawable/rounded_corners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="8dp"
                    android:backgroundTint="#D3D3D3"
                    android:layout_marginTop="5dp"
                    android:textSize="20sp"
                    android:text="@string/gradation_3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gradation1"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/gradation5"
                    android:background="@drawable/rounded_corners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/gradation_5"
                    android:textSize="20sp"
                    android:elevation="8dp"
                    android:backgroundTint="#D3D3D3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gradation3"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/wmm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:backgroundTint="#D3D3D3"
                android:background="@drawable/rounded_corners"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:text="@string/wmm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/insideGsb"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/density"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/rounded_corners"
            android:text="@string/density"
            android:elevation="8dp"
            android:backgroundTint="#D3D3D3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insideGradation"
            android:layout_marginTop="20dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>